Remove padding from inner column to fix spacing issues

--- a/projects/mockup-sprint/css/structure.css
+++ b/projects/mockup-sprint/css/structure.css
@@ -15,7 +15,7 @@ inner-column {
 	max-width: 1200px; /* could be a variable in settings */
 	margin-right: auto;
 	margin-left: auto;
-	padding: 30px 8px; /* a loose default */
+/*	padding: 30px 8px; /* a loose default */*/
 }
 
 /*.site-header {
